--- a/frontend/project2/package.json
+++ b/frontend/project2/package.json
@@ -2,6 +2,7 @@
   "name": "project2",
   "version": "0.1.0",
   "private": true,
+  "proxy":"http://localhost:3001/",
   "dependencies": {
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.15.0",
